# build-system-koans

./: .gitignore  README.md  default.nix
autotools/: .gitignore  Makefile.am  README.md  c-test.c  c-unit.c  configure.ac  cpp-test.cpp  cpp-unit.cpp  example.h
